# nhldeez

./: .gitignore  pyproject.toml  test.ipynb
nhldeez/: __init__.py  api.py
