[tool.poetry]
name = "nhldeez"
version = "0.1.0"
description = ""
authors = ["Bryce Claughton <bclaughton@bank-banque-canada.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

duckdb = "^0.8.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"
flatten-json = "^0.1.13"
plotly = "^5.14.1"
polars = {extras = ["pandas", "pyarrow"], version = "^0.18.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"


[tool.poetry.group.working.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
